Agregue funcionalidad para reiniciar el juego

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
                     Sortear amigo
                 </button>
             </div>
+            <div class="button-container">
+            <button class="button-draw" onclick="reiniciarJuego()" aria-label="Reiniciar juego">
+                <img src="assets/refresh.jpg" alt="Ícono para reiniciar">
+                Reiniciar juego
+            </button>
+            </div>
         </section>
     </main>
 
