--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             </div>
         </section>
     </main>
-
     <script src="app.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
+
 </html>
