--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="main-content">
         <header class="header-banner">
             <h1 class="main-title">Amigo Secreto</h1>
-            <img src="assets/amigo-secreto.png" alt="Imagen representativa de amigo secreto">
+            <img class="img-banner" src="assets/amigo-secreto.png" alt="Imagen representativa de amigo secreto">
         </header>
         
         <section class="input-section">
@@ -27,17 +27,19 @@
             <ul id="listaAmigos" class="name-list" aria-labelledby="listaAmigos" role="list"></ul>
             <ul id="resultado" class="result-list" aria-live="polite"></ul>
 
-            <div class="button-container">
-                <button class="button-draw" onclick="sortearAmigo()" aria-label="Sortear amigo secreto">
-                    <img src="assets/play_circle_outline.png" alt="Ícono para sortear">
-                    Sortear amigo
+            <div class="button-wrapper">
+                <div class="button-container">
+                    <button class="button-draw" onclick="sortearAmigo()" aria-label="Sortear amigo secreto">
+                        <img src="assets/play_circle_outline.png" alt="Ícono para sortear">
+                        Sortear amigo
+                    </button>
+                </div>
+                <div class="button-container">
+                <button class="button-draw" onclick="reiniciarJuego()" aria-label="Reiniciar juego">
+                    <img src="assets/refresh.jpg" alt="Ícono para reiniciar">
+                    Reiniciar juego
                 </button>
-            </div>
-            <div class="button-container">
-            <button class="button-draw" onclick="reiniciarJuego()" aria-label="Reiniciar juego">
-                <img src="assets/refresh.jpg" alt="Ícono para reiniciar">
-                Reiniciar juego
-            </button>
+                </div>
             </div>
         </section>
     </main>
