--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     </main>
     <script src="app.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0"></script>
 </body>
 
 </html>
